--- a/Semana 4/index.html
+++ b/Semana 4/index.html
@@ -2,7 +2,7 @@
   <html>
   <head>
     </head>
-    <body> <form method="post" action="http://localhost:8081">
+    <body> <form method="post" action="http://localhost:8081?email=angello&password=25">
       <label>Email:</label>
        <input type="text" name="email">
         <label>Password:</label>
